[tool.poetry]
name = "cyclegan-pytorch"
version = "0.1.0"
description = "Implementation of CycleGAN using Pytorch."
authors = ["yann <yann.leguilly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
jupyterlab = "^3.0.14"
black = "^20.8b1"
tqdm = "^4.60.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
